--- a/content/app.html
+++ b/content/app.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html ng-app="app" ng-controller="MainController">
   <head>
+    <base href="/">
     <title ng-bind="title">Ruby/JS developer James C Russell</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script defer src="bower_components/angular/angular.js"></script>
-    <script defer src="bower_components/angular-route/angular-route.js"></script>
-    <script defer src="app.js"></script>
+    <script defer src="/bower_components/angular/angular.js"></script>
+    <script defer src="/bower_components/angular-route/angular-route.js"></script>
+    <script defer src="/app.js"></script>
 
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="/app.css">
   </head>
 
   <body>
