Show an error if the app hasn't loaded in 5 seconds.

--- a/content/app.html
+++ b/content/app.html
@@ -43,7 +43,15 @@
     </nav>
 
     <!-- Main. -->
-    <section ng-view>Loading ...</section>
+    <section ng-view>
+      Loading ...
+      <div id="show-delayed" class="bg-warning">
+        <h1>Error</h1>
+        <p>
+          If you see this, that means either your connection is slow or the site is broken. If this persists, please be so kind and drop me an email to <a href="mailto:james@101ideas.cz?subject=Your portfolio is broken">contracts@101ideas.cz</a>. Thank you!
+        </p>
+      </div>
+    </section>
 
     <!-- Footer. -->
     <footer></footer>
