Bigger CTA buttons on mobile devices.

--- a/content/app.html
+++ b/content/app.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="/app.css">
   </head>
 
-  <body class="container">
+  <body class="container-fluid">
     <!-- Ribbon. -->
     <header>
       <div class="github-fork-ribbon-wrapper right">
