--- a/content/app.html
+++ b/content/app.html
@@ -61,7 +61,22 @@
       </div>
     </section>
 
+    <!-- To make sure the footer is always where it is supposed to be. -->
+    <div class="push"></div>
+
     <!-- Footer. -->
-    <footer></footer>
+    <footer>
+      <div class="footer">
+        <p>
+          {{year}} James C Russell.
+        </p>
+
+        <p>
+          <em>
+            I stand by my words. Even this site has been <a href="https://github.com/botanicus/portfolio">open-sourced</a>!
+          </em>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
