Working on the copy.

--- a/content/app.html
+++ b/content/app.html
@@ -75,7 +75,7 @@
 
         <p>
           <em>
-            I stand by my words. Even this site has been <a href="https://github.com/botanicus/portfolio">open-sourced</a>!
+            I stand by my words. Even this site has been <a href="https://github.com/botanicus/portfolio">open-sourced</a>.
           </em>
         </p>
       </div>
