--- a/content/app.html
+++ b/content/app.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script defer src="/bower_components/angular/angular.js"></script>
-    <script defer src="/bower_components/angular-route/angular-route.js"></script>
+    <script defer src="/bower_components/angular/angular.min.js"></script>
+    <script defer src="/bower_components/angular-route/angular-route.min.js"></script>
     <script defer src="http://www.google-analytics.com/analytics.js"></script>
     <script defer src="/app.js"></script>
 
