--- a/content/app.html
+++ b/content/app.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <div class="container-fluid">
+    <div class="container">
       <!-- Ribbon. -->
       <header>
         <div class="github-fork-ribbon-wrapper right">
@@ -70,7 +70,7 @@
     <footer>
       <div class="footer">
         <p>
-          {{year}} James C Russell
+          <span ng-show="year">{{year}}</span> James C Russell
         </p>
 
         <p>
