--- a/content/app.html
+++ b/content/app.html
@@ -9,6 +9,7 @@
 
     <script defer src="/bower_components/angular/angular.min.js"></script>
     <script defer src="/bower_components/angular-route/angular-route.min.js"></script>
+    <script defer src="/bower_components/angular-tooltips/dist/angular-tooltips.min.js"></script>
     <script defer src="http://www.google-analytics.com/analytics.js"></script>
     <script defer src="/app.js"></script>
 
@@ -16,6 +17,7 @@
 
     <link rel="stylesheet" href="/bower_components/github-fork-ribbon-css/gh-fork-ribbon.css" />
     <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/bower_components/angular-tooltips/dist/angular-tooltips.min.css" />
     <!--[if lt IE 9]>
       <link rel="stylesheet" href="/bower_components/github-fork-ribbon-css/gh-fork-ribbon.ie.css" />
     <![endif]-->
